use-case-demos/data-sovereignty/policy/test/pod-all-regions.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    data-sovereignty: eu
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: topology.kubernetes.io/region
            operator: Exists
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
