use-case-demos/data-sovereignty/policy/test/pod-multiple-regions.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    data-sovereignty: eu
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: topology.kubernetes.io/region
            operator: In
            values:
            - francecentral
            - eu-central-1
            - europe-central2
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
