use-case-demos/data-sovereignty/policy/test/pod-no-match-expr-with-target-key.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    data-sovereignty: eu
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: topology.kubernetes.io/region
            operator: In
            values:
            - italynorth
        - matchExpressions:
          - key: random_label
            operator: In
            values:
            - random_value
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
