use-case-demos/data-sovereignty/policy/test/pod-no-match-expr.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    data-sovereignty: eu
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchFields:
          - key: metadata.name
            operator: In
            values:
            - minikube
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
