use-case-demos/data-sovereignty/policy/test/pod-no-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    data-sovereignty: eu
spec:
  affinity:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
