use-case-demos/data-sovereignty/policy/test/pod-specific-unknown-region.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    data-sovereignty: eu
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: topology.kubernetes.io/region
            operator: In
            values:
            - bergamo
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
